[gd_scene load_steps=12 format=3 uid="uid://dg7xsp6ryiitl"]

[ext_resource type="Script" uid="uid://qj6svfcqgq0k" path="res://scripts/characters/npc/enemies/slime.gd" id="1_cwua4"]
[ext_resource type="Texture2D" uid="uid://cj2qln4hrhpoh" path="res://assets/sprites/slime.png" id="2_s10pt"]
[ext_resource type="PackedScene" uid="uid://rwf2x3g8i2ud" path="res://scenes/utility/kill_zone.tscn" id="3_ab78f"]
[ext_resource type="Script" uid="uid://tyfell5shmev" path="res://scripts/characters/npc/enemies/slime_hit_box.gd" id="4_4kuqp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nw61j"]
atlas = ExtResource("2_s10pt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pflw4"]
atlas = ExtResource("2_s10pt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2170"]
atlas = ExtResource("2_s10pt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2qeq"]
atlas = ExtResource("2_s10pt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnq3f"]
atlas = ExtResource("2_s10pt")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2rpc3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw61j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pflw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2170")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2qeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnq3f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7won"]
size = Vector2(12, 3)

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_cwua4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2rpc3")
autoplay = "default"
frame = 4
frame_progress = 0.326103

[node name="KillZone" parent="." instance=ExtResource("3_ab78f")]
collision_layer = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KillZone"]
modulate = Color(0, 0, 1, 1)
position = Vector2(-7, -10)
scale = Vector2(0.494703, 3.9375)
polygon = PackedVector2Array(42.2931, 3.80635, 46.336, 6.34603, -12.285, 6.34603, -8.24218, 3.80635, 4.04283, 1.77778, 28.2998, 1.77778)

[node name="RayCastRightBottom" type="RayCast2D" parent="."]
position = Vector2(17, 6)
target_position = Vector2(0, 13)

[node name="RayCastLeftBottom" type="RayCast2D" parent="."]
position = Vector2(-14, 6)
target_position = Vector2(0, 13)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(20, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-17, 0)

[node name="SlimeHitBox" type="Area2D" parent="."]
collision_mask = 3
script = ExtResource("4_4kuqp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeHitBox"]
position = Vector2(1, -4.5)
shape = SubResource("RectangleShape2D_p7won")
debug_color = Color(1, 0, 0.088366, 0.42)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
modulate = Color(0, 1, 1, 1)
position = Vector2(1, 5)
polygon = PackedVector2Array(-5, -10, -10, 0, -12, 11, 12, 11, 11, 0, 5, -10)

[connection signal="body_entered" from="SlimeHitBox" to="." method="_on_slime_hit_box_body_entered"]
